[project]
name = "paints-undo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # "accelerate==0.30.1",
    "av>=14.3.0",
    "bitsandbytes==0.43.1",
    "diffusers==0.28.0",
    "einops>=0.8.1",
    "onnxruntime>=1.21.0",
    "opencv-python>=4.11.0.86",
    "peft==0.13.0",
    "pillow>=10.4.0",
    "protobuf==3.20",
    "safetensors>=0.5.3",
    "tensorboardx>=2.6.2.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "huggingface-hub==0.25.0",
    # "transformers==4.41.1",
    "xformers>=0.0.29.post3",
    "gradio==4.43.0",
    "fastapi==0.112.4",
    "gradio-client==1.3.0",
    "pydantic==2.9.0",
    "pydantic-core==2.23.2",
    "accelerate==0.32.0",
    "transformers==4.41.1",
    # "gradio==5.24.0",
]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"